added information about the body element andsome of its attributes

--- a/index.html
+++ b/index.html
@@ -54,6 +54,108 @@
     </section>
 
     <section>
+    <!--Body The Document Body element-->
+
+    <h2>The Body Element</h2>
+
+    <p>The body HTML element represents the content of an HTML document. There can be only one body element in a document.
+    </p>
+
+    <h3>Event attributes</h3>
+
+    <p>Each of the below event attribute names is linked to its equivalent window interface event. You can listen to these events using addevent listener instead of
+        adding the oneventname attribute to the body element
+    </p>
+
+    <p>onafterprint function to call after the use has printed the document</p>
+
+    <br>
+
+    <p>onbeforeprint function to call when the user requests printing of the document</p>
+
+    <br>
+
+    <p>onbeforeunlaod funciton to call when the document is about to be unloaded</p>
+
+    <br>
+
+    <p>onblur function to call when the document loses focus</p>
+
+    <br>
+
+    <p>onerror function to call when the document fails to load properly</p>
+
+    <br>
+
+    <p>onfocus function to call when the document receives focus</p>
+
+    <br>
+
+    <p>onhashcahnge function to call when the fragment identifier part (starting with the hash (#) character) of the document's current address has changed</p>
+
+    <br>
+
+    <p>onlanguagechange function to call when the preferred languages changed</p>
+
+    <br>
+
+    <p>onload function to call when the document has received a message</p>
+
+    <br>
+
+    <p>onmessageerror function to call when the document has received a message that cannot be deserialized</p>
+
+    <br>
+
+    <p>onoffline function to call when netowrk communication has failed</p>
+
+    <br>
+
+    <p>ononline function to call when netowrk communcaion has been restored</p>
+
+    <br>
+
+    <p>onpageswap function to call when you navigate across documents, when the previous document is about to unload</p>
+
+    <br>
+
+    <p>onpagehide function to call when the browser hides the current page in the process of presenting a different page form the session's history</p>
+
+    <br>
+
+    <p>onpagereveal function to call when a document is first rendered, eaither when loading a fresh document from the network or activating a document</p>
+
+    <br>
+
+    <p>onpageshow function to call when the browser displays the window's document due to navigation</p>
+
+    <br>
+
+    <p>oppopstate function to call when the user has navigated session history</p>
+
+    <br>
+
+    <p>onresize function to call when the document has been resized</p>
+
+    <br>
+
+    <p>onrejectionhandled function to call when a javascript promise is handled state</p>
+
+    <br>
+
+    <p>onstorage function to call when the storage area has changed</p>
+
+    <br>
+
+    <p>onunhandledrejection function to call when a javascript promise that has no rejection handler is rejected</p>
+
+    <br>
+
+    <p>onunload function to call when the document is going away</p>
+
+    </section>
+
+    <section>
     
     
     <!--Headings-->
